# Hand2NoteApi

./: README.md
csharp/Hand2Note.Api/: ActivityMonitor.cs  Hand2Note.Api.csproj  Hand2Note.Api.csproj.DotSettings  Hand2Note.cs
csharp/Hand2Note.Api.Tests/: H2NApiDLLTest.cs  Hand2Note.Api.Tests.csproj
csharp/Hand2Note.Api/Entities/: HandActionMessage.cs  HandDealMessage.cs  HandHistoryMessage.cs  HandStartMessage.cs  PlayerSeatInfo.cs
csharp/Hand2Note.Api/Enums/: Actions.cs  Commands.cs  Currencies.cs  HandHistoryFormats.cs  Rooms.cs  Streets.cs
csharp/Hand2Note.Api/Helpers/: WinApiHelper.cs
include/: h2napi.h  h2napi.hpp
lib/x64/: h2napi.lib
lib/x86/: h2napi.lib
tests/: CMakeLists.txt  unit-h2napi.cpp  unit.cpp
